<resources>
    <string name="app_name">Learning 2</string>
    <string name="label_hello_world">HelloWorld!</string>
    <string name="welcome_activity_text0">Пожалуй, лучший\nфитнес трекер в ДВФУ</string>
    <string name="welcome_activity_text1">Созданный студентами</string>
    <string name="Cyclists">Cyclists ride in a group</string>
    <string name="welcome_activity_button_text0">Зарегистрироваться</string>
    <string name="welcome_activity_button_text1">Уже есть аккаунт?</string>
    <string name="registration_activity_app_bar_title">Регистрация</string>
    <string name="registration_activity_login_text_input">Логин</string>
    <string name="registration_activity_nick_text_input">Имя или никнейм</string>
    <string name="registration_activity_password_text_input">Пароль</string>
    <string name="registration_activity_rep_password_text_input">Повторите пароль</string>
    <string name="registration_activity_title_sex">Пол</string>
    <string name="registration_activity_check_box_1">Мужской</string>
    <string name="registration_activity_check_box_2">Женский</string>
    <string name="registration_activity_check_box_3">Другое</string>
    <string name="registration_activity_privacy_policy">Нажимая на кнопку, вы соглашаетесь\nс<font color='#4B09F3'>политикой конфиденциальности</font> и обработки персональных данных, а также принимаете <font color='#4B09F3'>пользовательское соглашение</font></string>
    <string name="log_in_activity_app_bar_title">Вход</string>
    <string name="log_in_activity_button_text0">Войти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_nav_menu_activities">Активность</string>
    <string name="bottom_nav_menu_person">Профиль</string>
    <string name="ic_main_button_description">button</string>
    <string name="fragment_activity_tab_mine_text">Моя</string>
    <string name="fragment_activity_tab_users_text">Пользователей</string>
    <string name="list_item_distance_counter_text">distance</string>
    <string name="list_item_total_time_counter">total_time</string>
    <string name="list_item_train_name">train_name</string>
    <string name="list_item_date_time">train_date</string>
    <string name="list_item_card_date">card_date</string>
    <string name="list_item_user_name">@user_name</string>
    <string name="fragment_item_detail_toolbar_title">train_name</string>
    <string name="fragment_item_detail_distance">value_of_distance</string>
    <string name="fragment_item_detail_duration">value_of_duration</string>
    <string name="list_item_start_time">Старт</string>
    <string name="list_item_start_value_time">start_time</string>
    <string name="Separator">|</string>
    <string name="list_item_end_time">Финиш</string>
    <string name="list_item_end_value_time">finish_time</string>
    <string name="list_item_comment">Комментарий</string>
    <string name="personal_fragment_title">Профиль</string>
    <string name="personal_fragment_title_2">Сохранить</string>
    <string name="personal_fragment_button">Выйти</string>
    <string name="personal_fragment_change_password">Изменить пароль</string>
    <string name="frament_change_password_old">Старый пароль</string>
    <string name="fragment_change_password_old">Старый пароль</string>
    <string name="fragment_change_password_new">Новый пароль</string>
    <string name="fragment_change_password_repeat_new">Повторите пароль</string>
    <string name="new_activity_menu_title">Погнали? :)</string>
    <string name="new_activitie_button_text">Начать</string>
    <string name="new_item_bicycle">Велосипед</string>
    <string name="new_item_running">Бег</string>
    <string name="new_item_swimming">Плавание</string>
    <string name="activity_type">activity_type</string>
    <string name="value_of_distance">val_of_dist</string>
    <string name="time_of_distance">tim_of_dist</string>
    <string name="separator">|</string>
    <string name="list_item_separator">|</string>
</resources>