<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingTop="24dp"
    android:id="@+id/my_list_item"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/list_item_card_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/grey"
        android:textSize="24sp"
        android:textFontWeight="400"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_item_card_date">
    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/list_item_card_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/list_item_distance_counter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textFontWeight="700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_item_distance_counter_text">
        </TextView>

        <TextView
            android:layout_marginTop="4dp"
            android:id="@+id/list_item_total_time_counter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_item_distance_counter"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textFontWeight="400"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_item_total_time_counter">
        </TextView>

        <LinearLayout
            app:layout_constraintTop_toBottomOf="@+id/list_item_total_time_counter"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/list_item_train_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textFontWeight="400"
                android:text="@string/list_item_train_name"/>

            <TextView
                android:id="@+id/list_item_date_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textAlignment="textEnd"
                android:textFontWeight="400"
                android:text="@string/list_item_date_time"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>