<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="80dp"
    android:paddingLeft="16sp"
    android:paddingRight="16sp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="379dp"
        android:layout_height="335dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
        android:contentDescription="@string/Cyclists"
        android:src="@drawable/ic_registration_bicycles">
    </ImageView>

    <TextView
        android:id="@+id/text0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/welcome_activity_text0"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
        android:textFontWeight="700"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:letterSpacing="0"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/image">
    </TextView>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/welcome_activity_text1"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
        android:textFontWeight="400"
        android:textSize="16sp"
        android:letterSpacing="0"
        android:gravity="center"
        android:textColor="@color/grey"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text0">
    </TextView>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button0"
        android:layout_width="218dp"
        android:layout_height="48dp"
        android:text="@string/welcome_activity_button_text0"
        android:textSize="16sp"
        android:letterSpacing="0"
        android:textFontWeight="700"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
        android:layout_marginTop="32dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textColor="@color/white"
        android:textAllCaps="false">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:layout_width="218dp"
        android:layout_height="48dp"
        android:text="@string/welcome_activity_button_text1"
        android:textSize="16sp"
        android:letterSpacing="0"
        android:textFontWeight="700"
        app:layout_constraintTop_toBottomOf="@id/button0"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
        android:layout_marginTop="16dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:background="@android:color/transparent"
        android:textColor="@color/violet"
        android:textAllCaps="false">
    </com.google.android.material.button.MaterialButton>
</androidx.constraintlayout.widget.ConstraintLayout>