<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/menu"
        android:background="@drawable/custom_shape_new_activity_menu"
        android:paddingVertical="32dp"
        android:paddingHorizontal="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/activity_type"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:gravity="start"
            android:textFontWeight="700"
            android:textSize="24sp"
            android:letterSpacing="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_type">
        </TextView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/distance_counter"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:gravity="start"
                android:textFontWeight="400"
                android:textSize="24sp"
                android:letterSpacing="0"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_of_distance">
            </TextView>

            <TextView
                android:id="@+id/time_counter"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:textSize="24sp"
                android:letterSpacing="0"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_of_distance">
            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/finish_new_activity"
            android:scaleType="centerCrop"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/ic_main_button_description"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/ic_new_activity_stop_button"
            android:backgroundTint="@color/violet"
            app:fabSize="normal"
            app:elevation="6dp"
            android:layout_gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>