<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:paddingHorizontal="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/transparent"
        android:paddingVertical="16dp"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:layout_height="match_parent">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:navigationIcon="@drawable/ic_action_back"
                app:layout_collapseMode="pin" />

            <TextView
                android:id="@+id/expanded_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:text="@string/log_in_activity_app_bar_title"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="20sp" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayoutTextBoxes"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="271.52dp"
                android:layout_height="240dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/Cyclists"
                android:src="@drawable/ic_registration_bicycles">
            </ImageView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="0dp"
                android:id="@+id/textInputLayoutLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_activity_login_text_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_activity_password_text_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLogin">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/log_in_activity_button0"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/log_in_activity_button_text0"
                android:textSize="16sp"
                android:letterSpacing="0"
                android:textFontWeight="700"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"
                android:textColor="@color/white"
                android:textAllCaps="false">
            </com.google.android.material.button.MaterialButton>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>